--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
         </nav>
         <ul class="list contact-list">
           <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="contact-link link"
-              >info@devstudio.com</a
+            <a class="contact-link link" href="mailto:info@devstudio.com" 
+              >
+              <svg class="icon-envelope">
+                <use
+                  href="./images/symbol-defs.svg#icon-envelope"
+                  width="16"
+                  height="12"
+                ></use>
+              </svg>info@devstudio.com 
+              </a
             >
           </li>
           <li class="contact-item">
@@ -77,6 +85,11 @@
               </p>
             </li>
             <li class="hidden-item">
+              <div class="features-svg">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="text-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text text-desk">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -84,12 +97,22 @@
               </p>
             </li>
             <li class="hidden-item">
+              <div class="features-svg">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="text-title">ПЛАНУВАННЯ</h3>
               <p class="text text-desk">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="hidden-item">
+              <div class="features-svg">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="text-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text text-desk">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -144,6 +167,36 @@
               <div class="team-div">
                 <h3 class="team">Ігор Дем'яненко</h3>
                 <p class="text position">Product Designer</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item team-item">
@@ -156,6 +209,36 @@
               <div class="team-div">
                 <h3 class="team">Ольга Рєпіна</h3>
                 <p class="text position">Frontend Developer</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item team-item">
@@ -168,6 +251,36 @@
               <div class="team-div">
                 <h3 class="team">Микола Тарасов</h3>
                 <p class="text position">Marketing</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item team-item">
@@ -180,6 +293,36 @@
               <div class="team-div">
                 <h3 class="team">Михайло Єрмаков</h3>
                 <p class="text position">UI Designer</p>
+                <ul class="list team-social">
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="social-link">
+                      <svg width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
