--- a/index.html
+++ b/index.html
@@ -38,20 +38,16 @@
         </nav>
         <ul class="list contact-list">
           <li class="contact-item">
-            <a class="contact-link link" href="mailto:info@devstudio.com" 
-              >
-              <svg class="icon-envelope">
-                <use
-                  href="./images/symbol-defs.svg#icon-envelope"
-                  width="16"
-                  height="12"
-                ></use>
-              </svg>info@devstudio.com 
-              </a
-            >
+            <a class="contact-link link" href="mailto:info@devstudio.com">
+              <svg class="icon-envelope" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
           <li class="contact-item">
-            <a href="tel:+380961111111" class="contact-link link"
+            <a class="contact-link link" href="tel:+380961111111">
+              <svg class="icon-smartphone" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -170,29 +166,35 @@
                 <ul class="list team-social">
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -212,29 +214,35 @@
                 <ul class="list team-social">
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -254,29 +262,35 @@
                 <ul class="list team-social">
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -296,29 +310,35 @@
                 <ul class="list team-social">
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="social-link">
-                      <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -328,27 +348,111 @@
           </ul>
         </div>
       </section>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <a class="footer-link logo link" href="./index.html"
-          >Web<span class="logo-footer logo">Studio</span>
-        </a>
-        <address class="address">
-          <p class="text-address">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="list">
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact link"
-                >info@devstudio.com</a
-              >
+      <section class="section">
+        <div class="container">
+          <h2 class="secondary-title">Постійні клієнти</h2>
+          <ul class="list client">
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a href="tel:+380961111111" class="footer-contact link"
-                >+38 096 111 11 11</a
-              >
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container footer-container">
+        <div>
+          <a class="footer-link logo link" href="./index.html"
+            >Web<span class="logo-footer logo">Studio</span>
+          </a>
+          <address class="address">
+            <p class="text-address">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="list">
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="footer-contact link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+380961111111" class="footer-contact link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="footer-title">Приєднуйтесь</h2>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
