--- a/portfolio.html
+++ b/portfolio.html
@@ -40,13 +40,23 @@
         </nav>
         <ul class="list contact-list">
           <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="contact-link link"
-              >info@devstudio.com</a
+            <a class="contact-link link" href="mailto:info@devstudio.com" 
+              >
+              <svg class="icon-envelope"  width="16"
+              height="12">
+                <use
+                  href="./images/symbol-defs.svg#icon-envelope"
+                ></use>
+              </svg>info@devstudio.com 
+              </a
             >
           </li>
           <li class="contact-item">
-            <a href="tel:+380961111111" class="contact-link link"
-              >+38 096 111 11 11</a
+            <a class="contact-link link" href="tel:+380961111111"
+              >
+              <svg class="icon-smartphone" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -217,25 +227,60 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-link logo link" href="./index.html"
-          >Web<span class="logo-footer logo">Studio</span>
-        </a>
-        <address class="address">
-          <p class="text-address">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="list">
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact link"
-                >info@devstudio.com</a
-              >
+      <div class="container footer-container">
+        <div>
+          <a class="footer-link logo link" href="./index.html"
+            >Web<span class="logo-footer logo">Studio</span>
+          </a>
+          <address class="address">
+            <p class="text-address">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="list">
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="footer-contact link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+380961111111" class="footer-contact link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="footer-title">Приєднуйтесь</h2>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a href="tel:+380961111111" class="footer-contact link"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
