--- a/portfolio.html
+++ b/portfolio.html
@@ -40,23 +40,17 @@
         </nav>
         <ul class="list contact-list">
           <li class="contact-item">
-            <a class="contact-link link" href="mailto:info@devstudio.com" 
-              >
-              <svg class="icon-envelope"  width="16"
-              height="12">
-                <use
-                  href="./images/symbol-defs.svg#icon-envelope"
-                ></use>
-              </svg>info@devstudio.com 
-              </a
-            >
+            <a class="contact-link link" href="mailto:info@devstudio.com">
+              <svg class="icon-envelope" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
           <li class="contact-item">
-            <a class="contact-link link" href="tel:+380961111111"
-              >
+            <a class="contact-link link" href="tel:+380961111111">
               <svg class="icon-smartphone" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>+38 096 111 11 11</a
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
             >
           </li>
         </ul>
